# composite-memory-allocator

./: CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: CMakeLists.txt
benchmarks/include/: BenchmarkFuncs.h
benchmarks/src/: main.cpp
example/: CMakeLists.txt
example/src/: main.cpp
google-tests/: CMakeLists.txt  CoalesceAllocatorTests.cpp  CompositeMemoryAllocatorTests.cpp  FixedSizeAllocatorTests.cpp
include/: BitOps.h  CoalesceAllocator.h  Common.h  CompositeMemoryAllocator.h  FixedSizeAllocator.h  MemoryAllocatorT.h  Types.h
scr/: CoalesceAllocator.cpp  CompositeMemoryAllocator.cpp  FixedSizeAllocator.cpp  main.cpp
src/: CoalesceAllocator.cpp  CompositeMemoryAllocator.cpp  FixedSizeAllocator.cpp
